--- a/nodeJsTest/index.html
+++ b/nodeJsTest/index.html
@@ -8,7 +8,14 @@
 <body>
     <h1>Jeddi</h1>
 
+    <p id="pCurso"></p>
+
     <script src="./js/js-directory.js"></script>
     <script src="./js-dominio.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <script>
+        $('#pCurso').append('Inserted title');
+    </script>
 </body>
 </html>
