--- a/the-js-junkyard/basics-01-starting-project/index.html
+++ b/the-js-junkyard/basics-01-starting-project/index.html
@@ -9,7 +9,9 @@
       href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/styles/app.css" />    
+    <link rel="stylesheet" href="assets/styles/app.css" />
+    <script src="./assets/scripts/vendor.js" defer></script>
+    <script src="./assets/scripts/app.js" defer></script>
   </head>
   <body>
     <header>
@@ -30,7 +32,4 @@
       <h2>Result: <span id="current-result">0</span></h2>
     </section>
   </body>
-
-  <script src="./assets/scripts/vendor.js"></script>
-  <script src="./assets/scripts/app.js"></script>
 </html>
