--- a/course-in-video/html-css/exercicies/ex002/index.html
+++ b/course-in-video/html-css/exercicies/ex002/index.html
@@ -14,7 +14,14 @@
     </p>
     &#x1F913
     🦊
-
-    &Delta;
+    <p>Symbols
+        &Delta;
+        &copy;
+        &reg;
+    </p>
+    <p>Emoji:
+        &#x1F596;
+        &#x1F913;
+    </p>
 </body>
 </html>
