--- a/the-js-junkyard/functions-01-starting-code/index.html
+++ b/the-js-junkyard/functions-01-starting-code/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
   <button id="start-game-btn">Start Game!</button>
+  <button id="reset-game-btn">Reset Game!</button>
 </body>
 </html>
